--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="DataContext.cs" />
     <Compile Include="Entities\CVPlsRequest.cs" />
+    <Compile Include="Entities\OrderStatusChange.cs" />
     <Compile Include="Entities\Question.cs" />
     <Compile Include="Entities\QuestionVote.cs" />
     <Compile Include="Entities\Tag.cs" />
@@ -127,8 +128,13 @@
     <Compile Include="Migrations\201604040342126_PerformanceEnhancements.Designer.cs">
       <DependentUpon>201604040342126_PerformanceEnhancements.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201604060645550_TrackStatusChanges.cs" />
+    <Compile Include="Migrations\201604060645550_TrackStatusChanges.Designer.cs">
+      <DependentUpon>201604060645550_TrackStatusChanges.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Statuses\OrderStatusChangeType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -182,6 +188,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201604040342126_PerformanceEnhancements.resx">
       <DependentUpon>201604040342126_PerformanceEnhancements.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604060645550_TrackStatusChanges.resx">
+      <DependentUpon>201604060645550_TrackStatusChanges.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
