--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -148,6 +148,10 @@
     <Compile Include="Migrations\201604061149135_TriggerForDeletingQuestions.Designer.cs">
       <DependentUpon>201604061149135_TriggerForDeletingQuestions.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201604061204218_CleanupExistingData.cs" />
+    <Compile Include="Migrations\201604061204218_CleanupExistingData.Designer.cs">
+      <DependentUpon>201604061204218_CleanupExistingData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Statuses\OrderStatusChangeType.cs" />
@@ -219,6 +223,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201604061149135_TriggerForDeletingQuestions.resx">
       <DependentUpon>201604061149135_TriggerForDeletingQuestions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604061204218_CleanupExistingData.resx">
+      <DependentUpon>201604061204218_CleanupExistingData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
